# django-admin-keycloak

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
core/: settings.py  urls.py
django_admin_keycloak/: admin.py  apps.py  middleware.py  models.py  oidc.py  signals.py  static_settings.py  urls.py  utils.py  views.py
django_admin_keycloak/locale/ru/LC_MESSAGES/: django.mo  django.po
django_admin_keycloak/management/commands/: update_static_providers.py
django_admin_keycloak/migrations/: 0001_initial.py  0002_rename_client_secret_key_keycloakprovider_client_secret_and_more.py  0003_keycloaksession.py  0004_delete_keycloaksession.py  0005_keycloaksession.py  0006_keycloakuser.py  0007_keycloakprovider_app_name.py  0008_alter_keycloakuser_family_name.py  0009_alter_keycloaksession_sid.py
django_admin_keycloak/session/: cache.py  db.py
django_admin_keycloak/static/admin/css/: keycloak.css
django_admin_keycloak/templates/admin/: base.html  login.html
django_admin_keycloak/templates/django_admin_keycloak/: auth_link.html  login-error.html  login.html
django_admin_keycloak/templatetags/: keycloak.py
django_admin_keycloak/tests/: common.py  test_admin.py  test_config.py  test_logout.py  test_redirect.py  test_session.py  test_state.py  test_users.py
