[tool.poetry]
name = "django-admin-keycloak"
version = "1.0.1"
description = "Django Admin Keycloak"
authors = ["Mikhail Badrazhan <mikhail@devilweb.ru>"]
readme = "README.md"
repository = "https://github.com/migelbd/django-admin-keycloak"
keywords = ["keycloak", "django"]
classifiers = [
    "Framework :: Django :: 4",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = 'django_admin_keycloak' }]

[tool.poetry.dependencies]
python = "^3.10"
python-keycloak = "^7.0.2"
django = ">=4, <7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
