[project]
name = "django-admin-keycloak"
version = "1.0.3"
description = "Django Admin Keycloak"
readme = "README.md"
authors = [{ name = "Mikhail Badrazhan", email = "mikhail@devilweb.ru" }]
requires-python = ">=3.10"
keywords = ["keycloak", "django"]
classifiers = [
    "Framework :: Django :: 4",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-keycloak>=7.0.2,<8",
    "django>=4,<7",
]

[project.urls]
Repository = "https://github.com/migelbd/django-admin-keycloak"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_admin_keycloak"]
